projects/compiler/test/typechecker/return/error_unreachable_stmt_while_inside.1.abra
func foo(): Int {
  while true {
    return 123
    val y = "abcd"
  }
  val x = 123
}